# subtranslator

./: .clinerules  .dockerignore  .env.examle  .env.example  .gitignore  .roorules  .windsurfrules  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  dev-ssl.sh  dev.sh  docker-compose.override.yml  docker-compose.yml  log_config_debug.json  log_config_info.json  main.py  pyproject.toml  requirements.txt  run.py  technical doc.md
.clinerules/: rules.md
.devcontainer/: devcontainer.json
app/: __init__.py  routes.py
app/models/: llm_translator.py  subtitle_processor.py
app/templates/: index.html
app/utils/: rate_limiter.py
design/: stitch_ui-v0.1.html
docs/: 00-PRD.md  01-system-overview.md  02-data-models.md  ARCHITECTURE_OVERVIEW.md  PRD.md  README.md  TECHNICAL_DESIGN.md  env-example.md  main.md
docs/core/: overview.md
docs/frontend/: overview.md
docs/routers/: overview.md
docs/tasks/: task 0.md  task 01.md  task 02.md  task 03.md  task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-07.md  task-08.md
docs/tests/: README.md  test_chunk_translator.md  test_config.md  test_context_detector.md  test_gemini_helper.md  test_parser.md  test_rate_limiter.md  test_reassembly_flow.md  test_translate_api.md
docs/translator/: overview.md
docs/v2-flask/: PRD.md  (+2 more)
scripts/: dev-ssl.sh  dev.sh
src/: app.py  chunk_translator.py  config_loader.py  context_detector.py  dependencies.py  exceptions.py  gemini_helper.py  main.py  models.py  parser.py  reassembler.py
templates/: index.html
test/: chunking.py  openrouter_request.py  test.srt
(+105 files in other folders)
