[project]
name = "subtranslator-ng-roo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.0",
    "srt>=3.5.3",
    "werkzeug>=3.0.0",
    "tenacity>=8.2.3",
    "google-genai>=1.0.0",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "pytest>=8.3.5",
    "jinja2>=3.1.6",
    "aiohttp>=3.12.13",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
